Adds JSONSchema Generation and Debug Logging
- Ability to generate JSON schemas using existing Table Translations.
- Debug logging has been added using the popular
[debug](https://github.com/visionmedia/debug) library.  Use
“postgres-to-mongo:TableConverter” or “postgres-to-mongo:*” to see
debug output.
- Version to 1.2.0

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "name": "Launch Program",
             "sourceMaps": true,
-            "program": "${workspaceFolder}/src/index.ts",
+            "program": "${workspaceFolder}/src/sandbox/index.ts",
             "preLaunchTask": "tsc: build - tsconfig.json",
             "outFiles": [
                 "${workspaceFolder}/dist/**/*.js"
