--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postgres-to-mongo",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A framework for converting Postgres Databases to Mongo.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/taicho/postgres-to-mongo#readme",
   "devDependencies": {
     "@types/chai": "^4.0.4",
+    "@types/debug": "0.0.30",
+    "@types/deepmerge": "^1.3.3",
     "@types/mocha": "^2.2.44",
     "@types/mongoose": "^4.7.25",
     "@types/pg": "^7.1.5",
@@ -43,6 +45,8 @@
     "typescript": "^2.6.1"
   },
   "dependencies": {
+    "debug": "^3.1.0",
+    "deepmerge": "^2.0.1",
     "moment": "^2.19.1",
     "mongoose": "^4.13.1",
     "pg": "^7.4.0",
