--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "gulp test",
     "build": "gulp build",
     "watch": "gulp watch",
-    "prepublishOnly": "gulp build"
+    "prepare": "gulp build"
   },
   "repository": {
     "type": "git",
