--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postgres-to-mongo",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "A framework for converting Postgres Databases to Mongo.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -37,7 +37,7 @@
     "@types/underscore": "^1.8.4",
     "chai": "^4.1.2",
     "del": "^3.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "github:gulpjs/gulp#v4.0.0",
     "gulp-mocha": "^4.3.1",
     "gulp-tslint": "^8.1.2",
     "mocha": "^4.0.1",
